Fix FindBug reported bugs as appropriate for the smart-exim module
Signed-off-by: Imran M Yousuf <imyousuf@smartitengineering.com>